terminada actvidad 3 tailwind interfaces

--- a/DIW/Practica4/actividad3Tailwind sin node/actividad3.html
+++ b/DIW/Practica4/actividad3Tailwind sin node/actividad3.html
@@ -4,18 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fashion World</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Fashion World - RMA P4 actividad 3 </title>
+  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 
 <body>
 
-  <!-- Header -->
   <header class="bg-blue-400 py-4 md:py-0">
     <div class="flex flex-col justify-between h-20 md:gap-0 md:h-24 md:flex-row items-center m-auto w-11/12">
       <h1 class="text-3xl font-extrabold md:px-3 hover:text-teal-500 cursor-pointer">Fashion World</h1>
       <nav>
-        <ul class="flex gap-3 flex-row items-center md:gap-7 text-lg">
+        <ul class="flex gap-3 flex-row items-center  md:gap-7 text-lg">
           <li><a class="font-bold hover:text-white rounded" href="#inicio">Inicio</a></li>
           <li><a class="font-bold hover:text-white rounded" href="#catalogo">Catálogo</a></li>
           <li><a class="font-bold hover:text-white rounded" href="#ofertas">Ofertas</a></li>
@@ -169,7 +168,6 @@
       </div>
     </div>
   </footer>
-
 </body>
 
 </html>
